# resume

./: CNAME  Gemfile  README.md  _config.yml  about.md  index.html  package.json  pyproject.toml  t.py  validate.py  vite.config.js
_data/: resume.yaml
_includes/: footer.html  header.html
_posts/: 2014-08-16-welcome-to-jekyll.markdown
art/: favicon.xcf
css/: main.sass
js/: d3-timeline.js  timeline.coffee
src/: App.vue  main.js
src/assets/: base.css  main.css
src/components/: Edu.vue  Hero.vue  Ideal.vue  Job.vue  Love.vue  Skill.vue  Tag.vue  ThemeButton.vue
src/data/: resume-data-bak-date.yaml  resume-data-bak.yaml  resume-data.new.yaml  resume-data.yaml
src/locales/: de.json  en.json
src/router/: index.js
src/views/: AboutView.vue  IdealView.vue  LoveView.vue  ResumeView.vue
